apex-job/src/domain/objects/JobDescription__c/fields/AggregateQueriesBaseConsumption__c.field-meta.xml
<CustomField>
    <fullName>AggregateQueriesBaseConsumption__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Base consumption of aggregate queries for this job type</description>
    <label>Aggregate Queries Base Consumption</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>