apex-job/src/domain/objects/JobDescription__c/fields/AggregateQueriesPerItemConsumption__c.field-meta.xml
<CustomField>
    <fullName>AggregateQueriesPerItemConsumption__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Per item consumption of aggregate queries for this job type</description>
    <label>Aggregate Queries Per Item Consumption</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>