apex-job/src/domain/objects/JobDescription__c/fields/AggregateQueriesSafety__c.field-meta.xml
<CustomField>
    <fullName>AggregateQueriesSafety__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Safety factor for aggregate queries consumption</description>
    <label>Aggregate Queries Safety</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>