apex-job/src/domain/objects/JobDescription__c/fields/AllowedDays__c.field-meta.xml
<CustomField>
    <fullName>AllowedDays__c</fullName>
    <description>Defned the day where the job are executable
If null then can run every day</description>
    <label>Allowed Days</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Monday</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Tuesday</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Wednesday</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Thursday</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Friday</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Saturday</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Sunday</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>