apex-job/src/domain/objects/JobDescription__c/fields/AllowedEndTime__c.field-meta.xml
<CustomField>
    <fullName>AllowedEndTime__c</fullName>
    <description>Define end time when job stop being executed during the day</description>
    <label>Allowed End Time</label>
    <type>Time</type>
</CustomField>