apex-job/src/domain/objects/JobDescription__c/fields/ApexCursorRowsSafety__c.field-meta.xml
<CustomField>
    <fullName>ApexCursorRowsSafety__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Safety factor for apex cursor rows consumption</description>
    <label>Apex Cursor Rows Safety</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>