apex-job/src/domain/objects/JobDescription__c/fields/CalloutBaseConsumption__c.field-meta.xml
<CustomField>
    <fullName>CalloutBaseConsumption__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Expected number of callouts for this job type. Used for governor limit planning and tracking. -1 indicates no measurement available.</description>
    <label>Callout Consumption</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>