apex-job/src/domain/objects/JobDescription__c/fields/CalloutPerItemConsumption__c.field-meta.xml
<CustomField>
    <fullName>CalloutPerItemConsumption__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Callouts consumed per item for this job type. Used with BaseConsumption and Safety to estimate total callouts. -1 indicates no measurement available.</description>
    <label>Callout Per Item Consumption</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>