apex-job/src/domain/objects/JobDescription__c/fields/CalloutSafety__c.field-meta.xml
<CustomField>
    <fullName>CalloutSafety__c</fullName>
    <defaultValue>0.98</defaultValue>
    <description>Safety multiplier applied to Callout estimations.</description>
    <label>Callout Safety</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>