apex-job/src/domain/objects/JobDescription__c/fields/CalloutTimeConsumption__c.field-meta.xml
<CustomField>
    <fullName>CalloutTimeConsumption__c</fullName>
    <defaultValue>-1</defaultValue>
    <description>Expected callout time consumption in milliseconds for this job type. Used for governor limit planning and tracking. -1 indicates no measurement available.</description>
    <label>Callout Time Consumption</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>