apex-job/src/domain/objects/JobDescription__c/fields/CalloutTimePerItemConsumption__c.field-meta.xml
<CustomField>
    <fullName>CalloutTimePerItemConsumption__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Callout time consumed per item in milliseconds. Used with BaseConsumption and Safety to estimate total callout time. -1 indicates no measurement available.</description>
    <label>Callout Time Per Item Consumption</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>