apex-job/src/domain/objects/JobDescription__c/fields/CalloutTimeSafety__c.field-meta.xml
<CustomField>
    <fullName>CalloutTimeSafety__c</fullName>
    <defaultValue>0.98</defaultValue>
    <description>Safety multiplier applied to Callout Time estimations (0..1]. 1 means no reduction.</description>
    <label>Callout Time Safety</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>