apex-job/src/domain/objects/JobDescription__c/fields/ConsecutiveFailures__c.field-meta.xml
<CustomField>
    <fullName>ConsecutiveFailures__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of consecutive failed executions. Used to apply a panic factor reducing chunk size.</description>
    <label>Consecutive Failures</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>