apex-job/src/domain/objects/JobDescription__c/fields/CpuTimeBaseConsumption__c.field-meta.xml
<CustomField>
    <fullName>CpuTimeBaseConsumption__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Expected CPU time consumption in milliseconds for this job type. Used for governor limit planning and tracking. -1 indicates no measurement available.</description>
    <label>CPU Time Consumption</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>