apex-job/src/domain/objects/JobDescription__c/fields/CpuTimePerItemConsumption__c.field-meta.xml
<CustomField>
    <fullName>CpuTimePerItemConsumption__c</fullName>
    <defaultValue>0</defaultValue>
    <description>CPU time consumed per item in milliseconds for this job type. Used with BaseConsumption and Safety to estimate total CPU time. -1 indicates no measurement available.</description>
    <label>CPU Time Per Item Consumption</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>