apex-job/src/domain/objects/JobDescription__c/fields/CpuTimeSafety__c.field-meta.xml
<CustomField>
    <fullName>CpuTimeSafety__c</fullName>
    <defaultValue>0.98</defaultValue>
    <description>Safety multiplier applied to CPU time estimations.</description>
    <label>CPU Time Safety</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>