apex-job/src/domain/objects/JobDescription__c/fields/DmlRowsPerItemConsumption__c.field-meta.xml
<CustomField>
    <fullName>DmlRowsPerItemConsumption__c</fullName>
    <defaultValue>0</defaultValue>
    <description>DML rows consumed per item for this job type. Used with BaseConsumption and Safety to estimate total DML rows. -1 indicates no measurement available.</description>
    <label>DML Rows Per Item Consumption</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>