apex-job/src/domain/objects/JobDescription__c/fields/DmlRowsSafety__c.field-meta.xml
<CustomField>
    <fullName>DmlRowsSafety__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Safety multiplier applied to DML Rows estimations (0..1]. 1 means no reduction.</description>
    <label>DML Rows Safety</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>