apex-job/src/domain/objects/JobDescription__c/fields/DmlStatementsConsumption__c.field-meta.xml
<CustomField>
    <fullName>DmlStatementsConsumption__c</fullName>
    <defaultValue>-1</defaultValue>
    <description>Expected number of DML statements for this job type. Used for governor limit planning and tracking. -1 indicates no measurement available.</description>
    <label>DML Statements Consumption</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>