apex-job/src/domain/objects/JobDescription__c/fields/DmlStatementsPerItemConsumption__c.field-meta.xml
<CustomField>
    <fullName>DmlStatementsPerItemConsumption__c</fullName>
    <defaultValue>0</defaultValue>
    <description>DML statements consumed per item for this job type. Used with BaseConsumption and Safety to estimate total DML statements. -1 indicates no measurement available.</description>
    <label>DML Statements Per Item Consumption</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>