apex-job/src/domain/objects/JobDescription__c/fields/DmlStatementsSafety__c.field-meta.xml
<CustomField>
    <fullName>DmlStatementsSafety__c</fullName>
    <defaultValue>0.98</defaultValue>
    <description>Safety multiplier applied to DML Statements estimations (0..1]. 1 means no reduction.</description>
    <label>DML Statements Safety</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>