apex-job/src/domain/objects/JobDescription__c/fields/EmailInvocationsSafety__c.field-meta.xml
<CustomField>
    <fullName>EmailInvocationsSafety__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Safety factor for email invocations consumption</description>
    <label>Email Invocations Safety</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>