apex-job/src/domain/objects/JobDescription__c/fields/FetchCallsOnApexCursorPerItemConsumption__c.field-meta.xml
<CustomField>
    <fullName>FetchCallsOnApexCursorPerItemConsumption__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Per item consumption of fetch calls on apex cursor for this job type</description>
    <label>Fetch Calls On Apex Cursor Per Item Cons</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>