apex-job/src/domain/objects/JobDescription__c/fields/FetchCallsOnApexCursorSafety__c.field-meta.xml
<CustomField>
    <fullName>FetchCallsOnApexCursorSafety__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Safety factor for fetch calls on apex cursor consumption</description>
    <label>Fetch Calls On Apex Cursor Safety</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>