apex-job/src/domain/objects/JobDescription__c/fields/FutureCallsPerItemConsumption__c.field-meta.xml
<CustomField>
    <fullName>FutureCallsPerItemConsumption__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Future calls consumed per item for this job type. Used with BaseConsumption and Safety to estimate total future calls. -1 indicates no measurement available.</description>
    <label>Future Calls Per Item Consumption</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>