apex-job/src/domain/objects/JobDescription__c/fields/FutureCallsSafety__c.field-meta.xml
<CustomField>
    <fullName>FutureCallsSafety__c</fullName>
    <defaultValue>0.98</defaultValue>
    <description>Safety multiplier applied to Future Calls estimations (0..1]. 1 means no reduction.</description>
    <label>Future Calls Safety</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>