apex-job/src/domain/objects/JobDescription__c/fields/HeapSizeConsumption__c.field-meta.xml
<CustomField>
    <fullName>HeapSizeConsumption__c</fullName>
    <defaultValue>-1</defaultValue>
    <description>Expected heap size consumption in bytes for this job type. Used for governor limit planning and tracking. -1 indicates no measurement available.</description>
    <label>Heap Size Consumption</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>