apex-job/src/domain/objects/JobDescription__c/fields/HeapSizePerItemConsumption__c.field-meta.xml
<CustomField>
    <fullName>HeapSizePerItemConsumption__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Heap size consumed per item in bytes for this job type. Used with BaseConsumption and Safety to estimate total heap size. -1 indicates no measurement available.</description>
    <label>Heap Size Per Item Consumption</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>