apex-job/src/domain/objects/JobDescription__c/fields/HeapSizeSafety__c.field-meta.xml
<CustomField>
    <fullName>HeapSizeSafety__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Safety multiplier applied to Heap Size estimations (0..1]. 1 means no reduction.</description>
    <label>Heap Size Safety</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>