apex-job/src/domain/objects/JobDescription__c/fields/isHighPriority__c.field-meta.xml
<CustomField>
    <fullName>isHighPriority__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is High Priority</label>
    <type>Checkbox</type>
</CustomField>