apex-job/src/domain/objects/JobDescription__c/fields/isRecurrent__c.field-meta.xml
<CustomField>
    <fullName>isRecurrent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Recurrent</label>
    <type>Checkbox</type>
</CustomField>