apex-job/src/domain/objects/JobDescription__c/fields/MaxChunkSizeLimit__c.field-meta.xml
<CustomField>
    <fullName>MaxChunkSizeLimit__c</fullName>
    <defaultValue>50</defaultValue>
    <description>Upper cap for the computed chunk size. If set, the final chunk size will not exceed this value.</description>
    <label>Max Chunk Size Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>