apex-job/src/domain/objects/JobDescription__c/fields/MaxExecutionAttempt__c.field-meta.xml
<CustomField>
    <fullName>MaxExecutionAttempt__c</fullName>
    <defaultValue>-1</defaultValue>
    <label>Max Execution Attempt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>