apex-job/src/domain/objects/JobDescription__c/fields/MobilePushApexCallsSafety__c.field-meta.xml
<CustomField>
    <fullName>MobilePushApexCallsSafety__c</fullName>
    <defaultValue>0.98</defaultValue>
    <description>Safety factor for mobile push apex calls consumption</description>
    <label>Mobile Push Apex Calls Safety</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>