apex-job/src/domain/objects/JobDescription__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <defaultValue>-1</defaultValue>
    <description>Priority of the job description. The higher the priority, the more likely the job will be executed first.</description>
    <label>Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>