apex-job/src/domain/objects/JobDescription__c/fields/ProcessorName__c.field-meta.xml
<CustomField>
    <fullName>ProcessorName__c</fullName>
    <externalId>true</externalId>
    <label>Processor Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>