apex-job/src/domain/objects/JobDescription__c/fields/PublishImmediateDmlConsumption__c.field-meta.xml
<CustomField>
    <fullName>PublishImmediateDmlConsumption__c</fullName>
    <defaultValue>-1</defaultValue>
    <description>Expected number of publish immediate DML operations for this job type. Used for governor limit planning and tracking. -1 indicates no measurement available.</description>
    <label>Publish Immediate DML Consumption</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>