apex-job/src/domain/objects/JobDescription__c/fields/PublishImmediateDmlPerItemConsumption__c.field-meta.xml
<CustomField>
    <fullName>PublishImmediateDmlPerItemConsumption__c</fullName>
    <defaultValue>0</defaultValue>
    <description
  >Publish Immediate DML consumed per item for this job type. Used with BaseConsumption and Safety to estimate total DML publish immediate usage. -1 indicates no measurement available.</description>
    <label>Publish Immediate DML Per-Item Cons.</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>