apex-job/src/domain/objects/JobDescription__c/fields/PublishImmediateDmlSafety__c.field-meta.xml
<CustomField>
    <fullName>PublishImmediateDmlSafety__c</fullName>
    <defaultValue>0.98</defaultValue>
    <description>Safety multiplier applied to Publish Immediate DML estimations.</description>
    <label>Publish Immediate DML Safety</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>