apex-job/src/domain/objects/JobDescription__c/fields/QueriesConsumption__c.field-meta.xml
<CustomField>
    <fullName>QueriesConsumption__c</fullName>
    <defaultValue>-1</defaultValue>
    <description>Expected number of SOQL queries for this job type. Used for governor limit planning and tracking. -1 indicates no measurement available.</description>
    <label>Queries Consumption</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>