apex-job/src/domain/objects/JobDescription__c/fields/QueriesPerItemConsumption__c.field-meta.xml
<CustomField>
    <fullName>QueriesPerItemConsumption__c</fullName>
    <defaultValue>0</defaultValue>
    <description>SOQL queries consumed per item for this job type. Used with BaseConsumption and Safety to estimate total queries. -1 indicates no measurement available.</description>
    <label>Queries Per Item Consumption</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>