apex-job/src/domain/objects/JobDescription__c/fields/QueriesSafety__c.field-meta.xml
<CustomField>
    <fullName>QueriesSafety__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Safety multiplier applied to SOQL Queries estimations (0..1]. 1 means no reduction.</description>
    <label>Queries Safety</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>