apex-job/src/domain/objects/JobDescription__c/fields/QueryLocatorRowsBaseConsumption__c.field-meta.xml
<CustomField>
    <fullName>QueryLocatorRowsBaseConsumption__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Base consumption of query locator rows for this job type</description>
    <label>Query Locator Rows Base Consumption</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>