apex-job/src/domain/objects/JobDescription__c/fields/QueryLocatorRowsPerItemConsumption__c.field-meta.xml
<CustomField>
    <fullName>QueryLocatorRowsPerItemConsumption__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Per item consumption of query locator rows for this job type</description>
    <label>Query Locator Rows Per Item Consumption</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>