apex-job/src/domain/objects/JobDescription__c/fields/QueryLocatorRowsSafety__c.field-meta.xml
<CustomField>
    <fullName>QueryLocatorRowsSafety__c</fullName>
    <defaultValue>0.98</defaultValue>
    <description>Safety factor for query locator rows consumption</description>
    <label>Query Locator Rows Safety</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>