apex-job/src/domain/objects/JobDescription__c/fields/QueryRowsConsumption__c.field-meta.xml
<CustomField>
    <fullName>QueryRowsConsumption__c</fullName>
    <defaultValue>-1</defaultValue>
    <description>Expected number of query rows retrieved for this job type. Used for governor limit planning and tracking. -1 indicates no measurement available.</description>
    <label>Query Rows Consumption</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>