apex-job/src/domain/objects/JobDescription__c/fields/QueryRowsPerItemConsumption__c.field-meta.xml
<CustomField>
    <fullName>QueryRowsPerItemConsumption__c</fullName>
    <defaultValue>0</defaultValue>
    <description>SOQL query rows consumed per item for this job type. Used with BaseConsumption and Safety to estimate total query rows. -1 indicates no measurement available.</description>
    <label>Query Rows Per Item Consumption</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>