apex-job/src/domain/objects/JobDescription__c/fields/QueryRowsSafety__c.field-meta.xml
<CustomField>
    <fullName>QueryRowsSafety__c</fullName>
    <defaultValue>0.98</defaultValue>
    <description>Safety multiplier applied to SOQL Query Rows estimations (0..1]. 1 means no reduction.</description>
    <label>Query Rows Safety</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>