apex-job/src/domain/objects/JobDescription__c/fields/QueueableJobsBaseConsumption__c.field-meta.xml
<CustomField>
    <fullName>QueueableJobsBaseConsumption__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Expected number of queueable jobs for this job type. Used for governor limit planning and tracking.</description>
    <label>Queueable Jobs Consumption</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>