apex-job/src/domain/objects/JobDescription__c/fields/QueueableJobsSafety__c.field-meta.xml
<CustomField>
    <fullName>QueueableJobsSafety__c</fullName>
    <defaultValue>0.98</defaultValue>
    <description>Safety multiplier applied to queueable jobs estimations.</description>
    <label>Queueable Jobs Safety</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>