apex-job/src/domain/objects/JobDescription__c/fields/SmallestFailingChunk__c.field-meta.xml
<CustomField>
    <fullName>SmallestFailingChunk__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Smallest chunk size that failed recently. If set, next chunk size will be at most half of this value.</description>
    <label>Smallest Failing Chunk</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>