apex-job/src/domain/objects/JobDescription__c/fields/SoslQueriesBaseConsumption__c.field-meta.xml
<CustomField>
    <fullName>SoslQueriesBaseConsumption__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Expected number of SOSL queries for this job type. Used for governor limit planning and tracking. -1 indicates no measurement available.</description>
    <label>SOSL Queries Consumption</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>