apex-job/src/domain/objects/JobDescription__c/fields/SoslQueriesPerItemConsumption__c.field-meta.xml
<CustomField>
    <fullName>SoslQueriesPerItemConsumption__c</fullName>
    <defaultValue>0</defaultValue>
    <description>SOSL queries consumed per item for this job type. Used with BaseConsumption and Safety to estimate total SOSL queries. -1 indicates no measurement available.</description>
    <label>SOSL Queries Per Item Consumption</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>