apex-job/src/domain/objects/JobDescription__c/fields/SoslQueriesSafety__c.field-meta.xml
<CustomField>
    <fullName>SoslQueriesSafety__c</fullName>
    <defaultValue>0.98</defaultValue>
    <description>Safety multiplier applied to SOSL Queries estimations.</description>
    <label>SOSL Queries Safety</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>