apex-job/src/domain/objects/JobDescription__c/fields/SuccessStreak__c.field-meta.xml
<CustomField>
    <fullName>SuccessStreak__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of consecutive successful executions. Used to control ramp-up factor.</description>
    <label>Success Streak</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>