apex-job/src/domain/objects/JobDescription__c/fields/VariationResetThreashold__c.field-meta.xml
<CustomField>
    <fullName>VariationResetThreashold__c</fullName>
    <defaultValue>0.3</defaultValue>
    <description>Percentage variation threshold to reset the consumption model [0..1]. Trigger a reset of consumption model when Per Item consumption variation is above this threshold. 0.3 means 30% variation. </description>
    <label>Variation Reset Threashold</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>